Navbar spacing corrected, profile scrollbars fixed

--- a/app/assets/stylesheets/components/feed.scss
+++ b/app/assets/stylesheets/components/feed.scss
@@ -6,14 +6,13 @@
   bottom: 0;
   left: 0;
   z-index: -1;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .content-body {
   display: flex;
   align-items: center;
   justify-content: center;
-  // overflow: scroll;
 }
 
 .content-main-wrapper {
