--- a/app/assets/stylesheets/components/homepage.scss
+++ b/app/assets/stylesheets/components/homepage.scss
@@ -11,19 +11,10 @@
       -moz-transition: 0.25s all ease-in-out;
       -o-transition: 0.25s all ease-in-out;
       transition: 0.25s all ease-in-out;
+      opacity: 0.7;
       bottom: -150px;
     }
   }
-
-  // @media (max-height: 650px) {
-  //   .fire-picture {
-  //     -webkit-transition: 0.25s all ease-in-out;
-  //     -moz-transition: 0.25s all ease-in-out;
-  //     -o-transition: 0.25s all ease-in-out;
-  //     transition: 0.25s all ease-in-out;
-  //     bottom: -550px;
-  //   }
-  // }
 
   @media (max-height: 650px) {
     .fire-picture {
