--- a/app/assets/stylesheets/components/network.scss
+++ b/app/assets/stylesheets/components/network.scss
@@ -8,5 +8,5 @@
   left: 0;
   z-index: -1;
   margin: auto;
-  overflow: scroll;
+  overflow: auto;
 }
